--- a/fly.toml
+++ b/fly.toml
@@ -5,6 +5,9 @@ kill_signal = "SIGINT"
 kill_timeout = 5
 processes = []
 
+[build]
+  image = "ghcr.io/jonashackt/spring-boot-flyio:latest"
+
 [env]
 
 [experimental]
